--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+
+.card{
+  box-shadow: 0 4px 8px 0 lightgray;
+  transition : 0.4s;
+  border-radius: 5px;
+  width:270px;
+  height:375px;
+  background: white;
+  text-align: center;
+  font-size: 16px;
+  font-family: sans-serif;
+  float:left;
+  margin: 10px;
+}
+.card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
+  transform: scale(1.1);
+  cursor:pointer;
+}
+
+.card-img-top{
+  width: auto;
+  height:25vh;
+  object-fit: cover;
+}
+
+.navbar-brand{
+  color: black;
+}
